Add login functionalit and the sign up by google and git hub

--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@
 
 ZDATABASE_URL='mongodb+srv://mostafa93sh:mostafa93sh@cluster0.tu5urgu.mongodb.net/test'
 NEXTAUTH_SECRET='NEXTAUTH_SECRET'
+
+GITHUB_ID = 552f8c9a56f28d9914e5 
+GITHUB_SECRET = 626cdd18ad5949a2019e3be07f8e2d2c68427e57
+
+
+GOOGLE_CLIENT_ID = 894367479500-o5gbkcsost3oe77k86kub62mk3jtqujq.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
